cleaned up controls and animation, v1 complete
nb: bug with mergesort but good enough for now

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js
     "></script>
 
